--- a/css/common.css
+++ b/css/common.css
@@ -264,6 +264,8 @@ body {
     height: 100vh;
 }
 /* js_pf */
+
+
 .js_pf .cover{
     position: relative;
 }
@@ -272,24 +274,76 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    width: 1200px;
+    width: 1600px;
     height: 700px;
     background:rgba(255, 255, 255, 0.4);
     border-radius: 30px;
     box-shadow: 1px 1px 2px 1px rgba(0,0,0,0.08);
 }
 
-.js_pf .inner .js_slider{
-    position: relative;
-    background: #ddd;
-}
-.js_pf .inner .js_slide .slide{
+.js_pf .inner .js_slide{
     display: flex;
-    height: 700px;
-}/*
-.js_pf .inner .js_slide .slide>div{
-    flex: 50%;
-} */
+    align-items: center;
+}
+.js_pf .inner .js_slide .left{
+    flex: 1;
+}
+
+.js_pf .inner .js_slide .right{
+    flex: 1;
+    position: relative;
+}
+                    
+.js_pf .inner .js_slide .right .mockup .pc{
+    background: url(../img/pc.png) no-repeat center center / cover;
+    width: 604px;
+    height: 420px;
+    padding: 43px 68px 68px 60px;
+    margin: 0 auto;
+}
+.js_pf .inner .js_slide .right .mockup .pc_cover{
+    position: relative;
+    width: 100%;
+    height: 318px;
+    overflow: hidden;
+}
+.js_pf .inner .js_slide .right .mockup .pc_cover img{
+    border: 0;
+    vertical-align: middle;
+    font-size: 0;
+    border-radius: 10px;
+    max-width: 100%
+}
+.js_pf .inner .js_slide .right .mockup .mobile{
+    background: url(../img/mobile.png) no-repeat center center / cover; 
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    width: 178px;
+    height: 251px;
+    padding: 25px 19px 29px 55px;
+    /* transform: translateY(-100px);
+    opacity: 0;
+    transition: 1s 2s; */
+}
+.js_pf .inner .js_slide .right .mockup .mobile .mobile_cover{
+    position: relative;
+    width: 100%;
+    height: 198px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+.js_pf .inner .js_slide .right .mockup .mobile .mobile_cover .mo_top{
+    position: absolute;
+    top: -2px;
+    left: 18px;
+    width: 70px;
+    height: 10px;
+}
+
+
+
+
 
 /* ** 공통 **
 .cover {display:flex;}
