--- a/css/common.css
+++ b/css/common.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
@@ -58,8 +57,8 @@ body {
     position:fixed;
     top:30px;
     left:30px;
-    width: 80px;
-    height: 80px;
+    width: 40px;
+    height: 40px;
     z-index:998;
 }
 #header a {
@@ -133,7 +132,7 @@ body {
     z-index:999;
 }
 #header .cover .co_top {
-    width:1400px;
+    width:1600px;
     margin:0 auto;
     line-height:100px;
     font-size:30px;
@@ -150,8 +149,8 @@ body {
 }
 #header .cover .co_center .menu>li {
     flex:1;
-    padding:10px 75px;
-    text-align: right;
+    padding:10px 20px;
+   /*  text-align: right; */
 }
 #header .cover .co_center .menu>li>a {
     display:block;
@@ -159,18 +158,17 @@ body {
 #header .cover .co_center .menu>li .con_title {
     position: relative;
     display:block;
-    font-size: 45px;
+    font-size: 24px;
 }
 #header .cover .co_center .menu>li .con_num{
-    position: absolute;
-    top: -20px;
-    right: -20px;
+    display: block;
     font-size:15px;
+    margin-bottom: 10px;
     color:rgba(255, 255, 255, 0.5);
     font-weight: 100;
 } 
 #header .cover .co_bottom {
-    width:1400px;
+    width:1600px;
     margin:0 auto;
     line-height:100px;
     font-size:30px;
@@ -206,6 +204,7 @@ body {
     transform:scale(1.2);
 }
 
+
 /* main */
 .main {
     position:relative;
@@ -240,6 +239,8 @@ body {
     font-weight: 600;
     margin-top: 150px;
 }
+
+
 /* 공통 */
 .cover{
     display: flex;
@@ -260,15 +261,23 @@ body {
     position: relative;
     width: 60%;
     height: 100vh;
-    padding: 13% 0 0 6%;
+    padding: 50px;
     /* transform: translateX(60%); */
     transform: translateX(-100%);
     transition: 0.5s 0.5s;
     opacity: 0;
 }
+
+.fixLeft .innerBox{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 .section.on .fixLeft {
     transform: translateX(0);
     opacity:1;
+    background:#F7EEE5 ;
 }
 .fixRight {
     width:40%;
@@ -328,8 +337,8 @@ body {
 }
 .mock .mobile {
     position:absolute;
-    bottom:-20px;
-    left:-20px;
+    bottom:-30px;
+    left:-100px;
     width:250px;
     height:354px;
     background:url(../img/mobile.png) no-repeat center top / cover ;
@@ -424,24 +433,100 @@ body {
 }
 
 
-
 /* pf01 */
-.pf01 .cover {
-    background:url(../img/cover_bg01.jpg) no-repeat center center/cover;
+#pf01 .cover {
+    /* background: #F7EEE5; */
+    background: url(../img/hanhwa_cover.png)no-repeat center center/cover; 
 }
-.pf01 .fixRight {
+#pf01 .fixRight {
     background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);
 }
-.pf01 .itm01 {
+#pf01 .itm01 {
     background:#fff;
 }
-.pf01 .itm02 {
+#pf01 .itm02 {
     background:#f9f9f9;
 }
-.pf01 .itm03 {
+#pf01 .itm03 {
     background:#dddddd;
 }
-.pf01 .itm04 {
+#pf01 .itm04 {
+    background:#333;
+}
+/* pf02*/
+#pf02 .cover {
+    background: url(../img/jacksonchameleon_cover.png)no-repeat center center/cover; 
+}
+#pf02 .fixRight {
+    background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);
+}
+#pf02 .itm01 {
+    background:#fff;
+}
+#pf02 .itm02 {
+    background:#f9f9f9;
+}
+#pf02 .itm03 {
+    background:#dddddd;
+}
+#pf02 .itm04 {
+    background:#333;
+}
+/* pf03*/
+#pf03 .cover {
+    background: url(../img/kooksarang_cover.png)no-repeat center center/cover; 
+}
+#pf03 .fixRight {
+    background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);
+}
+#pf03 .itm01 {
+    background:#fff;
+}
+#pf03 .itm02 {
+    background:#f9f9f9;
+}
+#pf03 .itm03 {
+    background:#dddddd;
+}
+#pf03 .itm04 {
+    background:#333;
+}
+/* pf04*/
+#pf04 .cover {
+    background: url(../img/massimodutti_cover.png)no-repeat center center/cover; 
+}
+#pf04 .fixRight {
+    background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);
+}
+#pf04 .itm01 {
+    background:#fff;
+}
+#pf04 .itm02 {
+    background:#f9f9f9;
+}
+#pf04 .itm03 {
+    background:#dddddd;
+}
+#pf04 .itm04 {
+    background:#333;
+}
+/* pf045*/
+#pf05 .cover {
+    background: url(../img/metaquest_cover.png)no-repeat center center/cover; 
+}
+#pf05 .fixRight {
+    background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);
+}
+#pf05 .itm01 {
+    background:#fff;
+}
+#pf05 .itm02 {
+    background:#f9f9f9;
+}
+#pf05 .itm03 {
+    background:#dddddd;
+}
+#pf05 .itm04 {
     background:#333;
 }
 
@@ -465,9 +550,178 @@ body {
 
 
 
-.js_pf .cover{
-    position: relative;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+
+/* 공통 *
+.cover {display:flex;}
+.bx_left {width:40%;padding:50px;transform:translateX(-40%);transition:0.5s 0.5s;opacity:0;z-index:999;}
+.bx_right {position:relative;width:60%;height:100vh;background:rgba(255,255,255,0.95);padding:13% 0 0 6%;transform:translateX(60%);transition:1s 1s;opacity:0;}
+
+.page_num {position:absolute;top:30px;left:30px;font-size:20px;}
+.page_num .pg {color:var(--mc);}
+.cover h2 {position:absolute;bottom:30px;left:30px;font-size:26px;writing-mode:vertical-rl;font-weight:300;transform:rotate(180deg);}
+
+
+.info_bx {position:absolute;bottom:15%;left:20%;width:550px;background:var(--lc);padding:30px;font-family:'Noto Sans KR',sans-serif;line-height:1.6;font-size:14px;transform:translateX(-100px);transition:1s 2s;opacity:0;}
+.info_bx .keyword {text-align:right;margin-bottom:10px;}
+.info_bx .keywd {display:inline-block;font-size:12px;font-weight:100;padding:2px 7px 4px 7px;margin-right:3px;}
+.info_bx .ky01 {background:var(--stx);color:var(--lc);border-radius:3px;}
+.info_bx .ky02 {background:var(--dc);color:var(--lc);border-radius:3px;}
+.info_bx .ky03 {background:var(--gr);border-radius:3px;}
+
+.info_bx dl dt {font-weight:500;float:left;width:60px;}
+.info_bx dl dd {font-weight:300;}
+.info_bx dl dd.dd_info {margin-bottom:30px;clear:left;font-size:13px;}
+.info_bx dl .color {display:inline-block;width:15px;height:15px;border-radius:50%;margin:5px 5px 0 0;}
+
+
+.mock {position:relative;margin-bottom:30px;}
+.mock .mobile {position:absolute;bottom:-20px;left:-20px;width:250px;height:354px;background:url(../img/mo_mockup02.png) no-repeat center top;padding:34px 25px 29px 75px;transform:translateY(-100px);opacity:0;transition:1s 2s;}
+.mo_cover {position:relative;width:100%;height:283px;overflow:hidden;border-radius:15px;}
+.mock .mo_cover .m_img {position:absolute;top:0;left:0;width:100%;cursor:pointer;transition:7s;}
+.mock .mo_cover .m_img:hover {transform:translateY(-100%);top:100%;}
+.mock .mo_cover .mo_top {position:absolute;top:-2px;left:30px;width:91px;height:13px;}
+.mock .pc {background:url(../img/pc_mockup.png) no-repeat center top;width:790px;height:433px;padding:51px 84px;margin:0 auto;}
+.mock .pc_cover {position:relative;width:100%;height:312px;overflow:hidden;}
+.mock .pc_cover img {position:absolute;top:0;left:0;width:100%;cursor:pointer;transition:5s;}
+.mock .pc_cover img:hover {transform:translateY(-100%);top:100%;}
+
+.section.on .bx_left {transform:translateY(0);opacity:1;}
+.section.on .info_bx {transform:translateY(0);opacity:1;}
+.section.on .bx_right {transform:translateY(0);opacity:1;}
+.section.on .mock .mobile {transform:translateY(0);opacity:1;}
+
+.btn {text-align:center;margin-bottom:40px;display:flex;justify-content:center;}
+.btn a {display:block;width:200px;height:50px;margin:0 10px;font-size:14px;border:1px solid var(--gr);line-height:50px;font-weight:600;transition:0.5s;}
+.btn a:hover {border:1px solid var(--dc);background:var(--dc);color:var(--lc);}
+.stx {display:block;color:var(--stx);font-size:12px;line-height:1.4;font-family:'Noto Sans KR',sans-serif;text-align:center;}
+
+
+/* pf01 *
+#pf01 .cover {background:url(../img/cover_bg01.jpg) no-repeat center center/cover;}
+#pf01 .bx_left {background:linear-gradient(180deg, rgba(178,218,255,1) 6%, rgba(237,237,236,1) 77%, rgba(214,206,226,1) 100%);}
+#pf01 .co01 {background:#f3f3f3;}
+#pf01 .co02 {background:#94c9ff;}
+#pf01 .co03 {background:#deebf3;}
+#pf01 .co04 {background:#0c0c0c;}
+
+/* pf02 *
+#pf02 .cover {background:url(../img/cover_bg02.jpg) no-repeat center center/100%;}
+#pf02 .bx_left {background:linear-gradient(180deg, rgba(121,121,121,1) 0%, rgba(199,199,199,1) 48%, rgba(200,200,200,1) 100%);}
+#pf02 .co05 {background:#0c0c0c;}
+#pf02 .co06 {background:#171717;}
+#pf02 .co07 {background:#414141;}
+
+
+/* pf03 *
+#pf03 .cover {background:url(../img/cover_bg03_01.jpg) no-repeat center center/100%;}
+#pf03 .bx_left {background:linear-gradient(0deg, rgba(157,47,77,1) 0%, rgba(228,184,210,1) 42%, rgba(244,230,228,1) 56%, rgba(240,202,190,1) 74%, rgba(207,207,207,1) 100%);}
+#pf03 .co08 {background:#0c0c0c;}
+#pf03 .co09 {background:#ca7683;}
+#pf03 .co10 {background:#fff;border:1px solid var(--gr);}
+
+
+/* pf04 *
+#pf04 .cover {background:url(../img/cover_bg04.jpg) no-repeat center center/100%;}
+#pf04 .bx_left {background:linear-gradient(180deg, rgba(133,117,91,1) 0%, rgba(232,230,223,1) 39%, rgba(180,124,63,1) 92%);}
+#pf04 .co11 {background:#f1eae4;}
+#pf04 .co12 {background:#f2f2f2;}
+#pf04 .co13 {background:#0c0c0c;}
+
+
+/* pf05 *
+#pf05 .cover {background:url(../img/cover_bg05.jpg) no-repeat center center/100%;}
+#pf05 .bx_left {background:linear-gradient(180deg, rgba(0,38,99,1) 0%, rgba(136,147,167,1) 78%, rgba(219,219,219,1) 96%);}
+#pf05 .co14 {background:#003876;}
+#pf05 .co15 {background:#002652;}
+#pf05 .co16 {background:#e8f3fd;}
+#pf05 .co17 {background:#333;}
+
+
+/* pf06 
+#pf06 .cover {background:url(../img/cover_bg06.jpg) no-repeat center center/100%;;}
+#pf06 .bx_left {background:linear-gradient(180deg, rgba(0,81,96,1) 0%, rgba(136,147,167,1) 69%, rgba(54,67,105,1) 97%);}
+#pf06 .co18 {background:#002e7f;}
+#pf06 .co19 {background:#0f595c;}
+#pf06 .co20 {background:#ddd;}
+#pf06 .co21 {background:#0c0c0c;}
+
+
+/* pf07 *
+#pf07 .cover {background:url(../img/cover_bg06.jpg) no-repeat center center/100%;;}
+#pf07 .bx_left {background:linear-gradient(180deg, rgba(0,81,96,1) 0%, rgba(136,147,167,1) 69%, rgba(54,67,105,1) 97%);}
+#pf07 .co18 {background:#002e7f;}
+#pf07 .co19 {background:#0f595c;}
+#pf07 .co20 {background:#ddd;}
+#pf07 .co21 {background:#0c0c0c;}
+
+
+/* pf08 
+#pf08 .cover {background:url(../img/cover_bg06.jpg) no-repeat center center/100%;;}
+#pf08 .bx_left {background:linear-gradient(180deg, rgba(0,81,96,1) 0%, rgba(136,147,167,1) 69%, rgba(54,67,105,1) 97%);}
+#pf08 .co18 {background:#002e7f;}
+#pf08 .co19 {background:#0f595c;}
+#pf08 .co20 {background:#ddd;}
+#pf08 .co21 {background:#0c0c0c;}
+
+
+/* profile 
+#profile_pg {}
+#profile_pg .bx_img {position:relative;background:linear-gradient(0deg, rgba(201,201,201,1) 0%, rgba(212,216,223,1) 15%, rgba(236,212,189,1) 97%);width:40%;height:100vh;padding:50px;transform:translateX(-40%);transition:0.5s 0.5s;opacity:0;z-index:999;}
+#profile_pg .bx_img h2 {font-size:40px;}
+#profile_pg .bx_img .bx_info {margin-top:50px;}
+#profile_pg .bx_img .copyright {text-align:right;color:rgba(0,0,0,0.3);font-size:12px;position:absolute;bottom:30px;right:30px;line-height:1.4;}
+#profile_pg .bx_img figure {position:absolute;top:50%;right:-10%;transform:translateY(-100%);width:350px;height:350px;transition:1s 1s;opacity:0;}
+#profile_pg .bx_img figure img {width:100%;border-radius:50%;}
+
+#profile_pg .bx_career {width:60%;height:100vh;display:flex;flex-wrap:wrap;padding:10% 0 0 10%;transform:translateX(60%);transition:1s 1s;opacity:0;}
+#profile_pg .pro_title {display:block;font-size:24px;margin-bottom:12px;font-family:'Urbanist', sans-serif;font-weight:200;}
+#profile_pg dl {width:50%;font-size:15px;height:auto;line-height:1.4;font-family:'Noto Sans KR',sans-serif;}
+#profile_pg dt {font-weight:500;color:var(--dt);}
+#profile_pg dd {position:relative;font-weight:300;font-size:14px;margin-bottom:7px;}
+
+#profile_pg i {position:relative;font-size:26px;padding:10px 10px 8px 10px;border-radius:50%;background:var(--dt);color:var(--lc);transition:0.5s;}
+#profile_pg dd.ski {display:inline-block;margin:0 20px 40px 0;}
+#profile_pg dd.ski:hover i{background:#efc7b8;}
+#profile_pg dd .skill_des {position:absolute;bottom:-20px;left:50%;transform:translateX(-50%);font-size:10px;color:var(--dt);}
+
+
+#profile_pg.on .bx_img {transform:translateY(0);opacity:1;}
+#profile_pg.on .bx_career {transform:translateX(0);opacity:1;}
+#profile_pg.on figure {transform:translateY(-50%);opacity:1;}
+
+.fp-tableCell {height:auto !important;} */
+
+
+
+.fp-watermark{
+    display: none;
 }
+
 
 
 
@@ -624,10 +878,10 @@ body {
     
 
     /* main */
-    /* intro_pg **
+    /* main_pg **
     .main {
         position:relative;
-        background:url(../img/intro_bg.JPG) no-repeat center center/cover;
+        background:url(../img/main_bg.JPG) no-repeat center center/cover;
     }
     .main .box {
         position:absolute;
@@ -958,3 +1212,5 @@ body {
         height:auto !important;
     }
 } */
+
+
